# assist

./: Cargo.toml  function_description.json
assist/: Cargo.toml  function_description.json
assist/src/: llm_convo.rs  main.rs  markdown.rs
assist/src/llm_convo/: oai_convo.rs
assist/src/markdown/: compile_monodoc.rs  read_file_list.rs
assist_macro/: Cargo.toml
assist_macro/src/: lib.rs
