[package]
name = "assist"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
assist_macro = { path = "../assist_macro" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "4.0"
chrono = "0.4"
async-trait = "0.1.50"
